# VDFs

./: CMakeLists.txt  README.md  main.cpp
NTL/include/NTL/: ALL_FEATURES.h  BasicThreadPool.h  FFT_impl.h  REPORT_ALL_FEATURES.h  SmartPtr.h  ZZX.h  ZZ_p.h  ZZ_pX.h  config.h  linux_s390x.h  lip.h  lzz_pX.h  sp_arith.h  thread.h  tools.h  vector.h  version.h
NTL/src/: CMakeLists.txt  FFT.cpp  GF2EX.cpp  LLL_FP.cpp  ZZ.cpp  ZZX.cpp  ZZX1.cpp  ZZ_pX.cpp  lip.cpp  pd_FFT.cpp  vec_ZZ_p.cpp  xdouble.cpp
bicycl/: CMakeLists.txt
bicycl/bicycl/: gmp_extras.hpp
